[project]
name = "product-ranking-and-learning"
version = "0.1.0"
description = "Replication package for 'Revenue Maximization and Learning in Product
Ranking' - numerical experiments and algorithms"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/chenny888/product-ranking-and-learning"
Repository = "https://github.com/chenny888/product-ranking-and-learning"
Issues = "https://github.com/chenny888/product-ranking-and-learning/issues"
